<resources>
    <string name="app_name">LIS_PDA</string>
    <!--mainactivity-->
    <string name="currentuser"> 当前用户: %1s</string>
    <string name="mainpagetitle">首页</string>

    <!--transactivity-->
    <string name="trans_page_title">样本送检</string>
    <!--collectactivity-->
    <string name="collect_page_title">样本采集</string>
    <string name="collect_page_barcode_scan_title">样本条码:</string>
    <string name="collecttrans_page_barcode_info_title">样本信息(只显示近6个标本的详细信息)</string>
    <!--zxing-->
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限\n请检查应用权限</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <!-- activity_capture.xml-->
    <string name="cap_title">条码扫描</string>
    <!-- loginactivity -->
    <string name="confirm_btn">确定</string>
    <!-- activity_Setting -->
    <string name="ipaddress">IP地址:</string>
    <string name="port">端口号:</string>
    <string name="projectname">项目名:</string>
    <string name="savebtn">保存</string>
    <string name="setting_page_title">连接参数</string>
    <string name="tips">注意:如非必要,请勿修改连接参数,否则会导致程序无法运行</string>
</resources>
