<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="net.xhblog.lis_pda.activity.SettingActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/ipaddress"
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:id="@+id/textView5"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="66dp"/>
    <TextView
            android:text="@string/port"
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/port"
            android:id="@+id/textView7"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/projectname"
            android:gravity="center"
            android:layout_width="90dp"
            android:layout_height="44dp"
            android:id="@+id/textView8"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/pname"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:background="#99000000"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_setting_back"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_back"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/navi_title_setting"
                android:text="@string/setting_page_title"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
    </RelativeLayout>

    <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ip"
            android:paddingLeft="15dp"
            android:layout_alignLeft="@+id/port"
            android:layout_alignTop="@+id/textView5"/>
    <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_marginTop="131dp"
            android:id="@+id/port"
            android:paddingLeft="15dp"
            android:layout_alignLeft="@+id/pname"/>
    <EditText
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_marginTop="202dp"
            android:id="@+id/pname"
            android:paddingLeft="15dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="47dp"/>
    <Button
            android:id="@+id/btn_setting_save"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="177dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/savebtn"
            android:textColor="#fff"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"/>
    <TextView
            android:text="@string/tips"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_alignParentBottom="true"
            android:textColor="#D50B2C"
            android:layout_alignParentLeft="true" android:textSize="12sp"/>

</RelativeLayout>