<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:background="#99000000">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/btn_trans_back"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_back" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/navi_title_trans"
                android:text="@string/trans_page_title"
                android:textColor="#ffffff"
                android:textSize="20sp" />


    </RelativeLayout>

    <GridLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView
                android:text="@string/collect_page_barcode_scan_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/textView"
                android:textSize="16sp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textPersonName"
                android:ems="10"
                android:id="@+id/editText"/>
        <ImageButton
                android:layout_width="55dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                app:srcCompat="@drawable/launcher_icon"
                android:id="@+id/barcode_scan"/>
    </GridLayout>
    <View
            android:layout_height="0.5dp"
            android:layout_width="match_parent"
            android:background="#000000"
            android:layout_marginTop="5dp"
    />

    <TextView
            android:text="@string/collecttrans_page_barcode_info_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold"/>

    <GridView
            android:id="@+id/grid_sampleinfo"
            android:layout_width="match_parent"
            android:layout_height="506dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:numColumns="1"/>
</LinearLayout>